# block-detect

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-13-black-pixel-detection-design.md  2026-04-13-black-pixel-detection.md  2026-04-22-edge-roi-design.md  2026-04-22-edge-roi.md
src/block_detect/: __init__.py  classifier.py  cli.py  config.py  dropbox_client.py  gui.py  pipeline.py
tests/: test_cli.py
